# socioscope

./: Manifest.toml  Project.toml  README.md  config.yaml  data  ddl.sql  justfile  main.jl  main.py  notebook.ipynb  pyproject.toml  repl.jl  types.jl  utils.jl  wiki.db
socioscope/: Types.jl  Utils.jl
src/: data.jl  wiki.py
