[tool.poetry]
name = "socioscope"
version = "0.1.0"
description = ""
authors = ["Noah Syrkis <noah@syrkis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
jax = "^0.4.36"
wikipedia-api = "^0.7.1"
aiohttp = "^3.11.10"
pandas = "^2.2.3"
tqdm = "^4.67.1"
jupyterlab = "^4.3.2"
esch = "^0.7.0"
jax-metal = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
